test/error/LexInvalidDollar.fu
$public static class Test //ERROR: Expected interpolated string
{
	public static bool Run()
	{
		return true;
	}
}
